ocp/gitops/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: simple-dotnet-mvc
  namespace: dev
  labels:
    app: simple-dotnet-mvc
    app.kubernetes.io/component: simple-dotnet-mvc
    app.kubernetes.io/instance: simple-dotnet-mvc
    app.kubernetes.io/part-of: simple-dotnet-mvc
    app.openshift.io/connects-to: database-app
    app.openshift.io/runtime: dotnet
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app.kubernetes.io/part-of: simple-dotnet-mvc
    app.openshift.io/connects-to: database-app
    app.openshift.io/runtime: dotnet
    deployment: simple-dotnet-mvc
