ocp/gitops/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-dotnet-mvc
  namespace: dev
  labels:
    app: simple-dotnet-mvc
    app.kubernetes.io/component: simple-dotnet-mvc
    app.kubernetes.io/instance: simple-dotnet-mvc
    app.kubernetes.io/part-of: simple-dotnet-mvc
    app.openshift.io/connects-to: database-app
    app.openshift.io/runtime: dotnet
spec:
  host: simple-dotnet-mvc-dev.apps.cluster-9462.9462.sandbox1207.opentlc.com
  to:
    kind: Service
    name: simple-dotnet-mvc
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFkTCCBHmgAwIBAgISBODG8UwkmjInQtZ4sO8fnfntMA0GCSqGSIb3DQEBCwUA
[...]
      tNUhAw+HFyxAxl6j9At/D455wAEp9iyCaDXXe5Xe6Oj5piKUBg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCpmaLGptBzeRhr
[...]
      0XbTRv3aM0CFJJRaYcLUkns=
      -----END PRIVATE KEY-----
  wildcardPolicy: None
